<resources>
    <string name="app_name">RoMDB</string>
    <string name="log_in_title_login">Log In</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="remember_me_login">Remember me</string>
    <string name="log_in_btn">Log in</string>
    <string name="sign_up_btn_login">Sign up</string>
    <string name="sign_up_title">Sign up</string>
    <string name="email_adress_sign_up">Email adress</string>
    <string name="full_name_signup">Full name</string>
    <string name="sign_up_btn_signup">Sign up</string>
    <string name="toast_username_signup">Username must be between 6 and 15 characters</string>
    <string name="toast_password_signup">Password must be between 6 and 15 characters</string>
    <string name="toast_email_signup">Email must be between 10 and 25 characters</string>
    <string name="toast_fullname_signup">Full name must be between 5 and 25 characters</string>
    <string name="toast_username_DB_signup">Username taken!</string>
    <string name="toast_email_DB_signup">Email taken!</string>
    <string name="toast_eroareNecunoscuta_DB_signup">Unknown error!</string>
    <string name="toast_db_login">Invalid username or password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_addMovieInWL_param">Movie was added to %1$s</string>
    <string name="toast_deleteWLfromDB_param">Watch list %1$s was deleted</string>
    <string name="search_tiet_movieBrowser">Search</string>
    <string name="movie_browser_title_movieBrowser">Movie browser</string>
    <string name="toast_search_movieBrowser">Movie name must have at least 3 characters</string>
    <string name="toast_movieNotFound_movieBrowser">Movie not found!</string>
    <string name="toast_WL_name_short">Watch list name must have at least 3 characters</string>
    <string name="toast_zeroWLcreateOne_movieDetails">You don\'t have a watch list, to create one go to the watch list tab</string>
    <string name="url_image_profile">data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAA8FBMVEX///8AAAD+/v4ICAjANy0+uuGdnZ0EBAT19fXx8fH7+/ugoKDj4+PJycnk5OTZ2dnT09Pq6urHx8dDQ0O1tbUzMzO9vb13d3dNTU2fn5+qqqrPz8+Ojo4oKChsbGywsLBhYWGCgoIRERFRUVE8PDyIiIh9fX0fHx9bW1stLS1QUFAbGxtoaGglJSVAQEAXFxcuhqI1nb6KKiOsMyoxjao7r9MyExGWLSaEKSN4JR8ob4YWNkEfUmIkZHkqe5UhXXAaR1YbDg1HFxRYGxhmHxo4pcgPHiISLTWyMyojDg0rCgYhBQJHGhbMOjAYDQxiHxrWbkJrAAAXFElEQVR4nO1dC5ebuNlGdsrN2FxsYw8wvl9nxjPZJJvNZTfZNsl2+31J+///TSVxEyAJDIhpz+lzuk2OA0IPkt6bXr1I0v/wP1SHrtmG6TvuZLmcuEPLsNXn7lFbsK2JfFjNd+f7PiDRv+y2M9k1tefuYBNoTrB9AmV4mq+XZu+5+3o9VD94LCVHYOUZ+nP3+Qqozuz+GnohHgPrv2QorcPlenoRSdl47t6XQl9eNTmL2LrPTYELe9+MHkZftp+bBwvGoQV+GDPzubnQYMza4oewGj43nzy0NuZnBnPnuTllMGibH+ZoPTetBP5UBEGIh9FzU8PQ+AJmul2sZW/iDH3Lsnz8f467HATQWD2Xc5T/Aywdl63f5/ulxfEheqptuvJhvuFR3D23yNFZEvSyH1b1j3TD3XPm+VoogTL4dN9her31pbpMY+/2GU05mdah/syv11rPP9zSOS7b7XZlaCdKZ46NbC7VXVEp7lvr9DUwabNq0Dg4YVBth0UbPb4SLqUfQSuyXb2hSNdVGy1fBY/ynlvzCfSb47OPYlHGTFu1I1W5n39At1qjaIfu2zY+7IKmvWn5CTws8w+/1FQQXPh5q647b8PpagIFued0ZYjbSva5R3GhFXOXedK4Izs8F2talYtQ3Tad5UCW5WAfyEvXMuyqXdWz2rEbaZObOnLJ5bYbnKZ5Bfd0ni8C16gSH83q3S4icWa2r1znRnNnkeGj9EnE03xzGpTHnOwx8biN+H2O3pzkN+fMUEMeF7llgVfxYVg2ZUkX+6FVNjRkbJkZs2+2h94EhxzJ8nZfMpKk+hWtMlTSnGIuQWvW5w9egeR8wh1IQgHfCpanpLXG8tqG24rDlwIuzNsBr+vE1AlE8EqgEgQn9Eus8TXDlxlIXtiJkOBCXX5iCAfUC4zFtcNHcjx6bI6pazwTxQ6i98R/jB7U5xdyHDO1j5ZaqQJ3NVLtO6W97OG0GUHMccaKEqTWsEBXcct7jfqhMb8+kjlPLLslVYvCVqLBk2fmuQV+CAAc6KtRT2w/YSvxJn7CrtgFr40BjDnu6IOUakVRtlsySQt2BQp9t0YQUuzTZ2oSGacL8saw4/ZX+X/Rxm3yQxTp9lIi6R7FMJywxIzR6gBiKFSB2duxutAO4tBQ3rz3ldYJQoATRd4kxpuQqFQvXgW5rVmHOoIKREUujEvBXVEzarHhvxLBMF6Gt9mfh3mCIAc2USV/aa6heZFirBNvRaQ2xjZFVgZY2X6hC7aBa2p6r6erI385OzNIYoGxnli2qsMrbXMSzPMkwbwwUa34ZYhQ+jKt7ayQAeBS9NgNmjMMWa/cvFZT3cUm29620It4qYgI2CzCpqfkbzZpyCA/Fk2eXhYS8ojzI32RR9Qr7ZszeSk45HsRe1FlAbA6iCQ1+Ux9C4hej51eodNx1w2SI+yfyrxSHWxIinmhGQfCCtRbQNQ06fgeyF4jl5/a67Dn/jRajlDd2NwrNeJtFO0nccI0du+JZegRHTlpnF6HPQ+dR2yRlVw53BAt50L5kVaet88wciwuKvGLknRDLuk17rhzD/pgbJde2UMb6AnFcbYfkWU1bT/bNpLTqXTTH0FCsGxYoo7bj8hSqXJlb52+vqyrFqnl+/ZDbpE6TF2zICVoVek1puip1S5FrlpEUQGZrbteFM1on+EkJ6X9uAfIDK5GEOuDyld6yQOyIZNIa7Vv1CyzmlbfRUMIlKojeCUIiplkE1kUw8isj90WOSYIxbkQgpBi+gzSWYqWS/tufrR3EMluLVZZwGPfUpUJE7G+zVhvhiiGckZZzOJnnwx/6LqTpecNQnjecuI67nCkZVYPh1VPMxzXidqQ5RvYBjoc5fiWNY0fQ5ihkQfVPsMwDLVDfzUPK0Ijc3B8XK0Dz4X+Q86egwbEyHSW8mE1ZqSyRYifsnk4xDO1Nxa0DgepOhxXjFoQPZ3eEBQlySV3Pat4yoCwYlZCJc0iZEg+vODHUgYB4BBrQnCf0FJCpGxB/Pe84w/m8dQOveD29WEY5wpyDBGHj7/+9uHTyzdvforw5s2bl58+ffjt86+/f/wjoQkO8crRFpgf4tX/69u/ffn6/v27d69+gXiNAf/y6t37r1/eZjYhU4bYgdq0z9DHfYUKX4c6Nxm+j5++/YWLn7+9/PxHaHKDmWsaphvuTinKP76+ev2Cgx8vXrx+9zahiAJgPcMYqeFsOrbPMLa84X+3ICb4hk8vxk+/A3JZolu//4IolOLHL4l5uo5GL5zG59YJWguKhPtcjSDEh6xsUt5XYBdS/Fds2ECL+IHoA39b/Fr0lpkMjOS1vqzM8C+/kxSVv1UZvxCvYoYbTcpkSJ3l9lSim0+hixn+VJ3hm0yE6ZfKBF+k03Qi5bqxaSkubN8xVMBVDH/KMOSKGBbDlVboyLmN6D4t2zl+ZkVBE49hcnetMVQArSvN0/gp2c6RfrtuHUKGoL/2lh7aKb6G4atUX1DRNKxIJYhF/+2mDz5UZ/gSLptwSplQ3L+qTPDHe6VPWEatUyzkyoZQ0Lo/AfBrdYYfUFdCo20AqiuLFy++KOC0BtE8paJJHpjGKBgAX2tfg8P7sTrDX5Ngh2QB5Ut1bfEWrr8h4IwhUBqcEVgw2oQraS5NgLL5uTLDv6Ot6ZDhAShvKzP8E47cSLsHHIYNsk9MVpMAhfgccIUw/Rl29IIipahVOMkrD+EvALkRJy7D/I5mddDPIIUMh5IGn/hbVYZIHYJ7N85pqC5Mv8JlGEcumd2pO4gjZosABxGCqgvx5ze/fQxN75MXbi0pX/+syBAuQwdtw3IZgporkXr2LsJU6km9WwC+lfP79pkY+vA/hH98rWLYvFbgiu+hQDfX1eaEw3iYs1uE8wIHNMGnUoIvUcemM3kgH3aY33g/GASLI6ikM96j3sPFe+YzXNUiaPPO594ghnaFaQo1PRhH+8I6NLue3NBVV13I90sZwR9v0QyEjzoB3iQFoNY+jc9r0UWSH/lrJdP0ZxBmhkQBGmM8Sv6OVkHZKL5GGyXo6nUJw1rb+oXDTSSw9kYmT4k0/Zzdl4q44j+wUc8XOD++ouMOPbwg+AxrbevnDx1lgDcBJX0K+vwh3IS2miSR8VLJ9u1oZN5xGf65QUmC6Eq3hGEtUcOt5BFaYGiica1vqAY1NFzO6jRJKEqeAvpL9LMJuObbD6gMQ2MWWnp8hrXS2x94Lbrhg6GsUXgr8SXYSXgEQGJ493CGCtoAgXPg/H88hq/70WTpQd3Mj8vWOhBFO6mdIPYTSrT+p5Ah2okDRy26Z4K1v4sYTv+fxxBq+yC6RythWCunlstwET1Zh1r/d94Y3quQyREx7NupbxFuq0KFxBvD79CU7cXPEcGQbZVCjOMph7b3PzJdjG8A+JAJ2qkCd734njVAJ+zx7GWuwx9/QoLJ9jliyOtOvVnKlTSbWDbiNfbENG0+In0maXfQrDHSfYvhwMf6YgW+0hn+ePHun0q82tEtPcDfHqnl6HO1BdCSh+M4wB8fKALn26e/K+F0lAwzqxWxCkCpAN/fvS4Gv19//SdilO4uwzHkM6wVkJpwm0yzEyQ7nM/9j58/fIq2Z958+vDrx+jKR1WipihIWrR12P/+5T3amcGbMq/e/+t7H9NZEYk3klrCsJaHyPZ/EVxySIYPrOefBnNGCo2kjsE8YC72h2HGRtBKGNbaTdS5JYBkstfQTJ+s73AlwTQqdj6tJyOc5f5ISUeRrCnYqvgQ7eqc3IibPm4Pk1zmG8q/4vWmZg4YV9TMsp3Gr0Qz/NkGS/XHG1ONlpukzsCSwnAA1roUrUnVklHeqAJuZcsI9/9zV/t8hjVPJ3Cdi7viupK0AT71u12GWyYEedoszV4RnToFc1enXF4iFOr6+BKvhNdUzw+isUa/73B5IQqjMsC7jAA9EVe4yf8jL97Q4JQQ78Vt7OxCHOE5fXJoI1CdpOoiS2oT5FM52XFNjPr7Mztuq0QHVFwYYGXVGz6So2Qhjk9yLytpeD1pctDL4jSbqgtJ8pAQPJlN+cUc0fmqW4c0ETReRKXRGX2OXTOIzTbJQCJi57RAL27RQetxoaXvkPeqG55fZ5vfhzjeglKJ+oNKibGVOaLjtuCSvDRuXcaGZ7vVMavhU+iaqugdbI3WBjCiJJljkGYZ8bzxxsVAdNYaxwEUybgFZLpTixx7a4DjoOjvKtu8aqHaSY/x/uD6Dv2KzVAAwSgUB6Y4zMO2aNo5asnQtkaoMFO/r3WOqCLcFMVzAob/e9tW8SaLWt/ZwQR3miiCaA3A2XmGFB/pY3hoL6GmR5NlSyTCzwIJItcT6sGzalKDNC2XqFXlQpX1BRQyxwrHQxpRRNl08wUlWHoSUNd0uL87HzebJ7RrpES+XPVzCHUpDtFjQt/xEixO491uN4aOp6iS37pm27aaHEpCG1+ikSTs9zssgLmPHfkHIWoix1C6ix/XXWloM85uuVrKVGo+f48Z5kKCxw6/nBCeq6w6R8nO63Cem77jyUGwn622d/MIp8Xem7iubyRHGIj71/HjukO48ZD38lnUeqpt+K4nrxfbXaZo5+Z4Oe8eIaD0mF4i/2gzXgRLSyOCHJKNc7Duu/xei4oOeuCNbi433TaGy+Bhnp6o2EzvVrN1MJgMLWtka5qqYuNWh1A1bWT67mC/wNWvx4dJEg3BR2c6LrQ7QCqYZq3Fr8BwBrPtNMkZO28X+4FrooPp5Y3DMfcH6FD3Lgh9arTwu6sKGcLu47MlFGqmK8/maYHh4/wwcDJfkKm8bkcedPVvPXw4fCys1gcLULylcgb/omvmJHhInZzLfOY5RhyJLmdF5amh9PIA5yYpIotDURA+MXrbqjnZr4jA43QVuKbKoMZskjGa6IjAAKfQdft1lllUCsv2l+ttKkiOp7XnR4U7WXygSLENE3+9yxvIwXq2WJ3m4+mCMc64/tsceU/dSpoFijzJK8LzviwGw7goado9dWRaQ0Ql2B8Wq7vHRCfEr2QKNeFhD4Ur23jA/imtuoJQnEiPdLoYWNRJSUTqNpfp+PQAFcWNh766Zo6gWM02ySKIt7ZQasOqS4K9beTOTFeyYzM7KOkWJGMU2cTNVAXKF0I5mB1iBZ+43buRrOS8/evZUNuxn7quWA7X4VFr3PHqDNHB2G4LlsuhtugKKCNKSLkWNpB+mnTI8AY+T0RNdDZQfvS+Q4aLTkokZwANxWnFChctEETHPu66JYiCJ90tRGkJuvV/EdA5uVVXkhTvtnf+3acZXvvdMHQ7l6QII6gvHjthiPfaRZe4pmEPOgmXRqriOT6HhDOmhG07EQRRXL+rrz5kYcF5Om91b5tKUEU7tM/zmUD4aFwFQCxBVL+hc00RQj8Bpa8IXorhchdbZp6F3h0ID1uJpIhP5XXwvQca1DB/IaQobJcb7wGJLaPPwigNrSlhEqUIgvoiPDT+DBStZPthh8TNfCQkF2M0jk7kMUpfCwSRsrg1UZCo77c+UyXJ7adHDk/dqgvy+0RTdKK7H340r1V+Gkq3JAJ68+7G0d4CEjaOZirgyaNE5mvzC0s5ZA/t3Hf0uW4nl5IxwWOKK+yaLQ2jJPko2XE6LByAnHUwWQvfl1zBH9dhGQkwayN/L0qhRXV4KR+z3Lpit7oNSqKiGlLEqxEcauZ4p/SkIea3R1GZbfFpAFy4H9xpCGqS50TqRUMbfrppoNUlCe9TvVtc6QodrJXyFYUSrAVtltrUVxoeW48mlBKWnhvWIAnv0P119J7weSfieyHFh4rYTFwyTscdcW/i/MWQ43EWfs+5OjtJcw5TEJqBx/BIHv+IxantT3fZ7GzoUUgx6U9I8rLyQmOrnBwcPPl0BHHVhMf4ICb3yA40pxjfm6rHj3faIcrZl8xUj4QkwWa7dvNiIScKdXty2OKLY/vlkGyuFlIF87hwvg51FXT+eZUgTntRyfcQp/aB8+kgT/yRbevoWwLQLEB/6LZtOF6yN56WD9okh/dLjs5FaKVkm8s7GwSIsClcq9mSRCiDMc0L3Y3n8/F8NUd/JLnjcYXIuK00mbPkHFCMftBUsDK/Dp/2nDigRZnOcZHObAps9JuS+XUzIXfIeXVHMpg18q5cfoVYhHtiCz78bBcLipKvVprBmjzsxC+Ok8OiNkeLediCRGb/Ak7V4genq2A1yshdRhk1Fk61FKTJLaqQYpg9gyXpN+UDn8eDla8zzK0GQMHq6v1Fk38ejkA+FoU+UXEdx1nBLblqkkbYXmEEaBOzVMCkCApaHY6jxz1ETOJCOVB57SSNUNVNVvkH8QugpTNJuXLP7JtRyj3l9sqSNItplQx+buEdGu5Yx3x9bt0JaL4uXMpnafDNHKu7BKUpG/a1Kxyd+GDmpJkH1k2b+X7IoNerrO6peOCbcj6/vgYd7FMl8I0FxRYvh4mpcT8EIV0vjVNwz8yWnAlngLehD5e1M3Eyll9AJC8ybqpkkzLBcTrqESzJrMEtE1VC5xW+SEOJ0FwDZgmJum+uqC4KXSbq45bn4aD6c43A3PQvcSKYKE3KQMmM1a8uOddcAaxq5rWULMKx9OBFRsOWZhqVVMapAIY4rS+/SrbzcwU2yqYpOlDZEHRfo4H8opQuIXucn/4lyVQN1H0Memz8alsmBSsNPepxvtzyiS9N6y+XBHSGDSb/ht/jgvHm8q+v6LVxQGfINLAqgLdFig/YZDHmJq6rF9ojrgKd4bpBi7yFSLMjhrzrmxk0GHSPv4kdwVuItNIyD7zrmy9DAQwv7O1RdJSvCI5ObLRcItAZNlKzbAVAn3ScL5lJlTznsu60znDAZkiddGxTVtKb9COCAIZsY5Mu+znXN9f3QhgeWSezcPnPIsZshrTPdFwLOsMGgQMAmBnRkk6t8MROL27qG2KIYMhaWMQH30ls2QxrRtkyEMFwztIX9Nm/ZjFsRdAwfItmDJnhKLrkYFqmbVg0ghiy+0xrmKnxm7g4KegMeQXDKmDG7DOlItqBvQyv2E5gQwjDDdNfQJXbc2BGWPmFDGPcBjK/Xit9X7ghQ57hll+KHAuofM/pfob20fjaW8gYZovS5vqd7c+YY6eX6fvTEu8Uh6WHOmY45zC0M1fSt3LCK7n6/imI8+YkmztNxTDk1ePJCRvmR6C5u2rTCZGmy/dABDHkRF+iT+3GYMtdm9E2nCLZjUb+QhTEkNnvwvJSmHY64ytoYFfY3WVdiSFGlvJqDuUFCGsvh7UMb4pBbK7tI8SmAVx9kXODGXEaSaJGux9pHWbPZ4EM2WWVpHXuUvpw07p9P2XsJPH2p0T4FggntlWTHxu6NKUFHresPBlrO2VuWItiuKnuX9DNA3pN6/PaKZ5D6I0mD+zqyfSIcHOGTH1RlGLUOA07s3szXsiuZdgahG1Y7s2CH5Cjj3sLDFl+bdG7OFIZlvqG/c2mUiqFMIZTusFJGxvahG6jCyHoeUNtNE/fKqWJSFrkqo1YcAhxDOkHSmmOAO17EFwVdxXEMaTrC1pkghKbq5vsQoE4hoCepUYxCClWTcn3D66BQIbUwDCt6WLQW9Ka74zGEMiQGhimNX1biLaVuO1XQSDDKW2a0mZpv6AuWgnnRxDIkLoxSN1gyzsilIhcfQjT+ICel0dlmLfw2gl2RxDJkGabUuPYeVereaoXAaEMH4uuH3UM82HvSqHgqhDmW2AUB5HadM44qHP8gA26f9hCkgdG0TGihoBy2eHNw0Qk6OfamyZ1xjgXa47bT5TrsnlU7VndEBcqwQpJURfPhXAwhgg+hGVZJoRhmpYPfzFHtNxO1fLRVQbGKETuutEI/RtqCrbow6YcBz6s1obwLfPYvjHxBghyHvhXz+m4rh+C7oddGuT643lL/L/B4EaWgxCyfOMtJ45v1vpS4H8r/g09gNz9VqVRMQAAAABJRU5ErkJggg==</string>
    <string name="profile_username_title_param">%1$s\'s Profile</string>
    <string name="dialog_warning_delete_tv">\ \ Deleting your account is a permanent action and cannot be restored! Are you sure you want to continue?</string>
    <string name="toast_account_was_deleted_param">Account %1$s was deleted</string>
    <string name="edit_your_account_sign_up">Edit your account</string>
    <string name="dummyText_title_profileFragment">Profile</string>
    <string name="label_full_name_profileFragment">Full name:</string>
    <string name="dummyText_fullName_profileFragment">Popa Rares</string>
    <string name="label_email_profileFragment">Email:</string>
    <string name="dummyText_email_profileFragment">popa.rares@gmail.com</string>
    <string name="label_user_options_profileFragment">User Options</string>
    <string name="edit_account_btn_profileFragment">Edit Account</string>
    <string name="delete_account_btn_profileFragment">Delete Account</string>
    <string name="auto_log_in_checkBox_profileFragment">Auto Log In</string>
    <string name="sign_out_btn_profileFragment">Sign Out</string>
    <string name="dummyText_movieTitle_browserRow">War Horse</string>
    <string name="label_imdb_rating_browserRow">Imdb rating:</string>
    <string name="dummyText_imdbRating_browserRow">6.69</string>
    <string name="label_release_date_browserRow">Release date:</string>
    <string name="dummyText_releaseDate_browserRow">1999-03-03</string>
    <string name="label_genre_browserRow">Genre:</string>
    <string name="dummyText_genres_browserRow">Drama, comedy, thriller</string>
</resources>