<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/test">

    <ImageView
        android:id="@+id/iv_poster_browserRow"
        android:layout_width="148dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_movie_filter_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_title_browserRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/dummyText_movieTitle_browserRow"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/label_ratingImdb_browserRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_browserRow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/label_ratingImdb_browserRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_imdb_rating_browserRow"

        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_browserRow"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_browserRow" />

    <TextView
        android:id="@+id/tv_imdbRating_browserRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/dummyText_imdbRating_browserRow"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/label_ratingImdb_browserRow"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_browserRow" />


    <TextView
        android:id="@+id/label_releaseDate_browserRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_release_date_browserRow"

        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_browserRow"
        app:layout_constraintTop_toBottomOf="@+id/label_ratingImdb_browserRow" />

    <TextView
        android:id="@+id/tv_releaseDate_browserRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dummyText_releaseDate_browserRow"
        android:gravity="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/label_releaseDate_browserRow"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdbRating_browserRow" />


    <TextView
        android:id="@+id/label_genres_browserRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_genre_browserRow"

        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_browserRow"
        app:layout_constraintTop_toBottomOf="@+id/label_releaseDate_browserRow" />

    <TextView
        android:id="@+id/tv_genres_browserRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/dummyText_genres_browserRow"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/label_genres_browserRow"
        app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate_browserRow" />

</androidx.constraintlayout.widget.ConstraintLayout>